tests/functional/lang/eval-fail-any-2.err.exp
error:
       … while calling the 'any' builtin
         at /pwd/lang/eval-fail-any-2.nix:1:1:
            1| builtins.any (_: 1) "foo"
             | ^
            2|

       … while evaluating the second argument passed to builtins.any

       error: expected a list but found a string: "foo"
